RESOLVED FIXED166672
[Cocoa] Variation fonts without variations specified are not rendered as if the default variations were specified
https://bugs.webkit.org/show_bug.cgi?id=166672
Summary [Cocoa] Variation fonts without variations specified are not rendered as if t...
Myles C. Maxfield
Reported 2017-01-03 17:20:11 PST
[Cocoa] Variation fonts without variations specified are not rendered as if the default variations were specified
Attachments
Patch (5.12 KB, patch)
2017-01-03 17:22 PST, Myles C. Maxfield
no flags
Patch (5.28 KB, patch)
2017-01-03 19:12 PST, Myles C. Maxfield
no flags
Patch (6.11 KB, patch)
2017-01-03 19:17 PST, Myles C. Maxfield
no flags
Patch for committing (5.51 KB, patch)
2017-01-09 16:37 PST, Myles C. Maxfield
no flags
Patch for committing (13.60 KB, patch)
2017-01-17 18:16 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2017-01-03 17:22:14 PST
Myles C. Maxfield
Comment 2 2017-01-03 19:12:20 PST
Myles C. Maxfield
Comment 3 2017-01-03 19:17:15 PST
Myles C. Maxfield
Comment 4 2017-01-03 19:17:28 PST
*** Bug 166667 has been marked as a duplicate of this bug. ***
Myles C. Maxfield
Comment 5 2017-01-03 19:18:46 PST
Darin Adler
Comment 6 2017-01-04 15:45:31 PST
Comment on attachment 297985 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=297985&action=review > Source/WebCore/ChangeLog:15 > + Test: fast/text/variations/advances.html This is a pre-existing test? I don’t see it failing. So how can it be that this test covers the bug we are fixing?
Myles C. Maxfield
Comment 7 2017-01-04 20:37:42 PST
(In reply to comment #6) > Comment on attachment 297985 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=297985&action=review > > > Source/WebCore/ChangeLog:15 > > + Test: fast/text/variations/advances.html > > This is a pre-existing test? I don’t see it failing. So how can it be that > this test covers the bug we are fixing? It's failing on our internal bots.
WebKit Commit Bot
Comment 8 2017-01-05 12:32:26 PST
Comment on attachment 297985 [details] Patch Clearing flags on attachment: 297985 Committed r210370: <http://trac.webkit.org/changeset/210370>
WebKit Commit Bot
Comment 9 2017-01-05 12:32:30 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 10 2017-01-05 13:36:04 PST
Reverted r210370 for reason: This change caused hundreds of LayoutTest failures on Sierra. Committed r210375: <http://trac.webkit.org/changeset/210375>
Ryan Haddad
Comment 11 2017-01-05 13:37:00 PST
(In reply to comment #10) > Reverted r210370 for reason: > > This change caused hundreds of LayoutTest failures on Sierra. > > Committed r210375: <http://trac.webkit.org/changeset/210375> Link to test run with failures: https://build.webkit.org/builders/Apple%20Sierra%20Release%20WK2%20%28Tests%29/builds/2531
Myles C. Maxfield
Comment 12 2017-01-07 13:54:56 PST
(In reply to comment #11) > (In reply to comment #10) > > Reverted r210370 for reason: > > > > This change caused hundreds of LayoutTest failures on Sierra. > > > > Committed r210375: <http://trac.webkit.org/changeset/210375> > > Link to test run with failures: > > https://build.webkit.org/builders/ > Apple%20Sierra%20Release%20WK2%20%28Tests%29/builds/2531 Looks like this is because of the system font
Myles C. Maxfield
Comment 13 2017-01-09 16:37:02 PST
Created attachment 298414 [details] Patch for committing
WebKit Commit Bot
Comment 14 2017-01-11 10:27:43 PST
Comment on attachment 298414 [details] Patch for committing Clearing flags on attachment: 298414 Committed r210591: <http://trac.webkit.org/changeset/210591>
WebKit Commit Bot
Comment 15 2017-01-11 10:27:48 PST
All reviewed patches have been landed. Closing bug.
Myles C. Maxfield
Comment 16 2017-01-11 12:07:42 PST
Caused fast/text/trak-optimizeLegibility.html and fast/text/system-font-features.html to fail
Myles C. Maxfield
Comment 17 2017-01-11 13:41:38 PST
Myles C. Maxfield
Comment 18 2017-01-11 13:47:58 PST
Ryan Haddad
Comment 20 2017-01-11 17:55:39 PST
Myles C. Maxfield
Comment 21 2017-01-14 14:03:04 PST
The build failure on the iOS simulator is quite confusing. A build works locally, and I can't figure out what went wrong from inspection.
Myles C. Maxfield
Comment 22 2017-01-17 18:16:28 PST
Created attachment 299099 [details] Patch for committing
Myles C. Maxfield
Comment 23 2017-01-18 13:41:40 PST
Note You need to log in before you can comment on or make changes to this bug.